# ChangeLog for dev-libs/opensc
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.5 2004/07/14 03:41:41 vapier Exp $

*opensc-0.9.0_alpha (13 Jul 2004)

  13 Jul 2004; Mike Frysinger <vapier@gentoo.org> +opensc-0.9.0_alpha.ebuild:
  Add an alpha version -* for Lars T. Mikkelsen #55828.

  20 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> opensc-0.8.1.ebuild:
  stop using deprecated ?: use syntax

*opensc-0.8.1 (22 Feb 2004)

  12 Mar 2004; Mike Frysinger <vapier@gentoo.org> :
  Add local USE to control building with pcsclite or openct #44345 by jochen.

  22 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Lars T. Mikkelsen/Peter Stuge #28202.