@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/Attic/opensc-0.8.1.ebuild,v 1.5 2004/06/24 23:30:41 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/Attic/opensc-0.8.1.ebuild,v 1.6 2004/07/14 04:36:23 vapier Exp $
 
 DESCRIPTION="SmartCard library and applications"
 HOMEPAGE="http://www.opensc.org/"
@@ -9,13 +9,19 @@ SRC_URI="http://www.opensc.org/files/${P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="x86"
-IUSE="ldap pam pcsc-lite"
+IUSE="ldap pam pcsc-lite X"
 
 RDEPEND="ldap? ( net-nds/openldap )
 	pam? ( >=sys-libs/pam-0.77
 		>=sys-apps/shadow-4.0.3 )
+	X? ( virtual/x11 )
 	pcsc-lite? ( sys-apps/pcsc-lite )
 	!pcsc-lite? ( >=dev-libs/openct-0.5.0 )"
+
+src_unpack() {
+	unpack ${A}
+	use X || echo 'all:'$'\n''install:' > ${S}/src/signer/Makefile.in
+}
 
 src_compile() {
 	local mycard=""
