@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/Attic/opensc-0.9.0_alpha.ebuild,v 1.1 2004/07/14 03:41:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/Attic/opensc-0.9.0_alpha.ebuild,v 1.2 2004/07/14 04:36:23 vapier Exp $
 
 MY_P=${P/_/-}
 DESCRIPTION="SmartCard library and applications"
@@ -10,15 +10,21 @@ SRC_URI="http://www.opensc.org/files/${MY_P}.tar.gz"
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="-*" #~x86
-IUSE="ldap pam pcsc-lite"
+IUSE="ldap pam pcsc-lite X"
 
 RDEPEND="ldap? ( net-nds/openldap )
 	pam? ( >=sys-libs/pam-0.77
 		>=sys-apps/shadow-4.0.3 )
+	X? ( virtual/x11 )
 	pcsc-lite? ( sys-apps/pcsc-lite )
 	!pcsc-lite? ( >=dev-libs/openct-0.5.0 )"
 
 S=${WORKDIR}/${MY_P}
+
+src_unpack() {
+	unpack ${A}
+	use X || echo 'all:'$'\n''install:' > ${S}/src/signer/Makefile.in
+}
 
 src_compile() {
 	local mycard=""
