@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/opensc
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.5 2004/07/14 03:41:41 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/opensc/ChangeLog,v 1.6 2004/07/14 04:36:23 vapier Exp $
+
+  14 Jul 2004; Mike Frysinger <vapier@gentoo.org> opensc-0.8.1.ebuild,
+  opensc-0.9.0_alpha.ebuild:
+  If X is not installed then dont build the netscape plugin #56086 by Wolfram
+  Schlich.
 
 *opensc-0.9.0_alpha (13 Jul 2004)
 
